fix: Introduces no-wrap for box annotation label (#743)

--- a/web/src/shared/components/annotator/components/box-annotation/box-annotation.module.scss
+++ b/web/src/shared/components/annotator/components/box-annotation/box-annotation.module.scss
@@ -14,6 +14,7 @@
         display: flex;
         align-items: center;
         user-select: none;
+        white-space: nowrap;
     }
 
     .labelDraggable {
